--- a/login.html
+++ b/login.html
@@ -11,7 +11,10 @@
 	<style >
 		body
 		{
-			background-color: navajowhite;
+			/*background-color: navajowhite;*/
+			background-image: url("https://t3.ftcdn.net/jpg/03/55/60/70/360_F_355607062_zYMS8jaz4SfoykpWz5oViRVKL32IabTP.jpg");
+			background-repeat: no-repeat;
+			background-size: cover;
 		}
 	</style>
 </head>
@@ -21,8 +24,10 @@
 	  	Welcome ! 
 	  </h1>
 	</div>
+	<h4>Log in to explore the latest news and exclusive deals on cars
+	</h4>
 	<div class="container-md c3 ">
-		<img src="https://wallpapercave.com/wp/dnEpJZ3.jpg" class="rounded mx-auto d-block car3" alt="img2" height = "290px" width = "400px">
+		<img src="https://i.pinimg.com/originals/0e/7c/da/0e7cdac765181685f083714e2d6b5da0.gif" class="rounded mx-auto d-block car3" alt="img2" height = "290px" width = "400px">
 	</div>
 	<div class = "container cadre">
 		<form method="post">
@@ -35,11 +40,11 @@
                 <input type="password" class="form-control custom-input" id="password" name="password">
             </div>
             <div class="d-flex justify-content-center mt-4">
-            	<button type="button" class="btn btn-light">Se connecter</button>
+            	<button type="button" class="btn btn-light">Login</button>
             </div>
 		</form>
 	</div>
 <!--<a href = file:///D:/COURS%20M1/M1%20ProgWeb/index.html><button type="button" class="btn btn-outline-dark retour">Retour a la page d'accueil</button></a>-->
-<a href = "file:///D:/COURS%20M1/M1%20ProgWeb/index.html" class = "retour"><img src="https://t3.ftcdn.net/jpg/03/29/05/38/360_F_329053800_OK1YahgHSwWdF6lRiq5PsvUudGE8E1cS.jpg" height = 40px; width="80px;"alt = "image retour"><p class = "retouracc">Retour à la page d'accueil</p></a>
+<a href = "file:///D:/COURS%20M1/M1%20ProgWeb/index.html" class = "retour"><img src="https://s1.pngtank.com/thumbnails/63af4287a2573.png" height = 40px; width="80px;"alt = "image retour"><p class = "retouracc">Back to home page</p></a>
 </body>
 </html>
